# estudaqui

./: package-lock.json  package.json  tailwind.config.js
.github/workflows/: deploy-functions.yml  deploy.yml
backend/: .gitignore  README.md  pyproject.toml  run.sh
backend/src/estudaqui/: main.py
backend/src/estudaqui/routers/: upload.py
backend/src/estudaqui/services/: llm.py  ocr.py
frontend/: .bunfig.toml  .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  preprocess-mathblock-log.txt  tsconfig.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  loading.tsx  no-credits-timer.tsx  not-found.tsx  page.tsx  (+2 more)
functions/: .firebaserc  .gitignore  firebase.json  main.py  prompts.py
functions/image_processing/: processing.py
functions/pdf2img/: README.md  __init__.py  main.py  requirements.txt
functions/picture2figure/: main.py  openai_llm_provider.py  requirements.txt
functions/picture2info/: main.py  requirements.txt
functions/picture2info-ts/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
llm_cloud_function/: openai_llm_provider.py  requirements.txt
pdf_processing/: architecture.md
pdfparser/: pyproject.toml  run.sh
pdfparser/examples/: extract_questions_example.ipynb
pdfparser/src/pdfparser/: main.py
pdfparser/src/pdfparser/api/: routes.py
pdfparser/src/pdfparser/routers/: upload.py
studaki-web/: package-lock.json  package.json  postcss.config.mjs  tailwind.config.js
studaki-web/messages/: en.json  pt.json
user-workspace/: package.json
(+140 files in other folders)
