[project]
name = "pdfparser"
version = "0.1.0"
description = ""
authors = [
    {name = "Teo Pienescu",email = "teo_pienescu@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pdf2image (>=1.17.0,<2.0.0)", "fastapi (>=0.115.12,<0.116.0)", "pymupdf (>=1.26.0,<2.0.0)", "pdfplumber (>=0.11.6,<0.12.0)", "uvicorn (>=0.34.3,<0.35.0)", "python-multipart (>=0.0.20,<0.0.21)"]

[tool.poetry]
packages = [{include = "pdfparser", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
